# openrag_lab

./: .gitignore  .importlinter  .pre-commit-config.yaml  PROBLEM.md  README.md  TODO.md  TODO_NEXT.md  dev.py  pyproject.toml
.github/workflows/: backend.yml  frontend.yml
backend/src/openrag_lab/app/: dependencies.py  errors.py  main.py  runtime_lock.py  state.py
backend/src/openrag_lab/config/: settings.py
backend/src/openrag_lab/domain/: errors.py
backend/tests/: conftest.py
backend/tests/integration/api/: conftest.py  test_chat_eval.py  test_config.py  test_documents.py  test_experiments_batch.py  test_experiments_delete.py  test_external_providers.py  test_golden_sets.py  test_indexing.py  test_models.py  test_system.py  test_workspaces.py
backend/tests/integration/db/: conftest.py  test_checkpoint_repo.py  test_chunk_repo.py  test_document_repo.py  test_experiment_repo.py  test_golden_set_repo.py  test_sqlite_migrations.py  test_workspace_repo.py
backend/tests/integration/services/: conftest.py  test_external_llm_factory.py  test_indexing.py  test_retrieval_pipeline.py  test_task_queue.py
backend/tests/unit/app/: test_errors.py  test_external_call_publisher.py  test_runtime_lock.py  test_ws_hub.py
backend/tests/unit/config/: test_settings.py
backend/tests/unit/models/: test_chunking_config.py  test_document.py  test_embedding.py  test_experiment_config.py  test_external.py  test_ids.py  test_workspace.py
backend/tests/unit/services/: test_cancellation.py  test_golden_set_csv.py  test_license_store.py  test_pause_signal.py  test_preset.py
docs/: API_SPEC_v4.md  ARCHITECTURE_v3.md  CLAUDE.md  CONFIG_SCHEMA.md  CONTRIBUTING.md  DESIGN_BRIEF.md  ERROR_CODES.md  PLATFORM.md  README.md  REQUIREMENTS_v4.md
docs/design/: README.md
docs/design/project/: OpenRAG-Lab.html  app.jsx  data.js  tokens.css
docs/design/project/components/: modal-content.jsx  modal.jsx  shell.jsx
docs/design/project/screens/: auto-pilot.jsx  chat.jsx  chunking.jsx  experiments.jsx  library.jsx
docs/design/project/uploads/: ARCHITECTURE.md  CONFIG_SCHEMA.md  ERROR_CODES.md
frontend/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/e2e/: 01-auto-pilot.spec.ts  02-ab-matrix.spec.ts  03-yaml-roundtrip.spec.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: BatchSessionBar.tsx  ConfigPortModal.tsx  DropZone.test.tsx  DropZone.tsx  Shell.tsx  ui.test.tsx  ui.tsx
frontend/src/components/modals/: DefineMatrixModal.tsx  DimMismatchModal.tsx  ExportModal.tsx  GoldenPairModal.tsx  LicenseModal.tsx  NewWorkspaceModal.test.tsx  NewWorkspaceModal.tsx  UploadModal.tsx
frontend/src/hooks/: useWebSocket.test.tsx  useWebSocket.ts
frontend/src/screens/: AutoPilotWizard.tsx  ChatView.test.ts  ChatView.tsx  ChunkingLab.test.ts  ChunkingLab.tsx  ExperimentMatrix.test.tsx  ExperimentMatrix.tsx  ExternalProviders.tsx  GoldenSets.tsx  Library.tsx
frontend/src/stores/: batchSession.test.ts  batchSession.ts  externalCall.ts  indexing.test.ts  indexing.ts  theme.ts  workspace.test.ts  workspace.ts
frontend/src/styles/: tokens.css
(+99 files in other folders)
