[project]
name = "openrag-lab"
version = "0.0.1"
description = "Local-first intelligent RAG workbench for personal documents"
readme = "README.md"
requires-python = "==3.11.*"
license = { text = "TBD" }
authors = [{ name = "Sukhwan Yun" }]
keywords = ["rag", "retrieval-augmented-generation", "local-first"]

dependencies = [
    "pydantic>=2.9,<3",
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
# Adapter / runtime extras are added in their own phase.
# Phase 0 ships only domain models + tests.

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov>=5.0,<7",
    "ruff>=0.7,<1",
    "mypy>=1.13,<2",
    "import-linter>=2.1,<3",
    "pre-commit>=4.0,<5",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/openrag_lab"]

[tool.uv]
package = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "integration: marks integration tests (deselect with '-m \"not integration\"')",
    "windows_only: marks tests that only run on Windows",
    "posix_only: marks tests that only run on macOS/Linux",
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend/src", "backend/tests"]

[tool.ruff.lint]
# CONTRIBUTING.md §5.1 ruleset
select = ["E", "F", "I", "B", "UP", "N", "S", "C4", "ASYNC", "RUF"]
ignore = [
    "S101", # asserts allowed in tests (per-file ignore below covers it)
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["S101", "S105", "S106", "S108"]

[tool.ruff.lint.isort]
known-first-party = ["openrag_lab"]

# ---------------------------------------------------------------------------
# mypy — domain layer is strict; rest gets baseline strictness.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
mypy_path = "backend/src"
namespace_packages = true
explicit_package_bases = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "openrag_lab.domain.*"
strict = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["backend/src/openrag_lab"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
